# Api

./: .env.example  Cargo.toml  rustfmt.toml  start-server.ps1  wsl-port-commands.txt
src/: main.rs  state.rs
src/data/: device.rs  device_list.rs  messages.rs  mod.rs
src/data/device_list/: device_create.rs  device_remove.rs  device_update.rs  finders.rs  getters.rs  mod.rs  reconnect.rs  redis.rs
src/errors/: err.rs  messages.rs  mod.rs
src/modules/: mod.rs
src/modules/device/: mod.rs
src/modules/device/activate/: service.rs  structs.rs
src/modules/device/deactivate/: service.rs
src/modules/device/light/: service.rs
src/modules/device/reconnect/: service.rs
src/modules/device_list/: mod.rs
src/modules/device_list/devices/: service.rs
src/modules/device_list/status_checker/: service.rs
src/modules/device_list/status_interval/: service.rs
src/modules/esp_api/: app.rs
src/redis/: conn.rs  mod.rs  types.rs
src/router/: device.rs  device_list.rs  mod.rs  websocket.rs
src/utils/: constants.rs  http_request.rs  ip_from_req.rs  mod.rs
src/ws/: manager.rs  mod.rs  prelude.rs  session.rs
