[package]
name = "pp-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-cors = "0.6.5"
actix-web = "4.5.1"
dotenv = "0.15.0"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15.1"
rand = "0.8.5"
redis = "0.25.2"
redis_rs = "0.9.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
actix-xml = "0.2.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
thiserror = "1.0.61"
reqwest = "0.12.4"
